--- a/course_python_data_science_primeiros_passos.ipynb
+++ b/course_python_data_science_primeiros_passos.ipynb
@@ -2529,11 +2529,11 @@
         "  print(linguagem[_])"
       ],
       "metadata": {
-        "id": "2O7Qz5Y1deSd",
-        "outputId": "35b3317b-a7ae-4369-aac3-593a03b950a6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2O7Qz5Y1deSd",
+        "outputId": "35b3317b-a7ae-4369-aac3-593a03b950a6"
       },
       "execution_count": 3,
       "outputs": [
@@ -2558,11 +2558,11 @@
         "dúvida.split('?')"
       ],
       "metadata": {
-        "id": "mi3iHrC4eWBE",
-        "outputId": "431899f3-9b35-4a57-f081-4e54ae9b8424",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mi3iHrC4eWBE",
+        "outputId": "431899f3-9b35-4a57-f081-4e54ae9b8424"
       },
       "execution_count": 9,
       "outputs": [
@@ -2588,12 +2588,12 @@
         "'. '.join(misturas)"
       ],
       "metadata": {
-        "id": "or0zTpAye-x9",
-        "outputId": "b7b46ebc-1934-444b-fac5-ab090a5e4302",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "id": "or0zTpAye-x9",
+        "outputId": "b7b46ebc-1934-444b-fac5-ab090a5e4302"
       },
       "execution_count": 11,
       "outputs": [
@@ -2630,11 +2630,11 @@
         "len(lista)"
       ],
       "metadata": {
-        "id": "Ki64b6jZgxyi",
-        "outputId": "0c6c4efd-b954-46d2-8af8-487a173ddbed",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ki64b6jZgxyi",
+        "outputId": "0c6c4efd-b954-46d2-8af8-487a173ddbed"
       },
       "execution_count": 43,
       "outputs": [
@@ -2656,11 +2656,11 @@
         "lista[1:5]"
       ],
       "metadata": {
-        "id": "7I4HcZXjgyqp",
-        "outputId": "473507f7-94b5-4649-a9ea-a3f70237b6a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7I4HcZXjgyqp",
+        "outputId": "473507f7-94b5-4649-a9ea-a3f70237b6a0"
       },
       "execution_count": 44,
       "outputs": [
@@ -2682,11 +2682,11 @@
         "lista[1:4]"
       ],
       "metadata": {
-        "id": "HtW1FlRShAtp",
-        "outputId": "f9b17039-635a-4aae-a6e5-0d18d9f7dd69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HtW1FlRShAtp",
+        "outputId": "f9b17039-635a-4aae-a6e5-0d18d9f7dd69"
       },
       "execution_count": 45,
       "outputs": [
@@ -2708,11 +2708,11 @@
         "lista[:3]"
       ],
       "metadata": {
-        "id": "e5PMmWmQhJyS",
-        "outputId": "aa39bd26-82f0-430f-fe3f-ff3d07a3e254",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "e5PMmWmQhJyS",
+        "outputId": "aa39bd26-82f0-430f-fe3f-ff3d07a3e254"
       },
       "execution_count": 46,
       "outputs": [
@@ -2734,11 +2734,11 @@
         "lista[3:]"
       ],
       "metadata": {
-        "id": "8dG2iRCjhLLr",
-        "outputId": "90eb0841-0113-4246-c527-fed6a6a6e598",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8dG2iRCjhLLr",
+        "outputId": "90eb0841-0113-4246-c527-fed6a6a6e598"
       },
       "execution_count": 47,
       "outputs": [
@@ -2760,11 +2760,11 @@
         "lista[:]"
       ],
       "metadata": {
-        "id": "HHIOTW2ihVFI",
-        "outputId": "aa202dac-f3eb-41fa-b4e9-d8b6a35a34f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HHIOTW2ihVFI",
+        "outputId": "aa202dac-f3eb-41fa-b4e9-d8b6a35a34f6"
       },
       "execution_count": 48,
       "outputs": [
@@ -2787,11 +2787,11 @@
         "lista"
       ],
       "metadata": {
-        "id": "pizbxhz2h37J",
-        "outputId": "9f9de2ff-31c4-45af-f6a0-36703c494531",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pizbxhz2h37J",
+        "outputId": "9f9de2ff-31c4-45af-f6a0-36703c494531"
       },
       "execution_count": 49,
       "outputs": [
@@ -2814,11 +2814,11 @@
         "lista"
       ],
       "metadata": {
-        "id": "DtbAjb2oiBBo",
-        "outputId": "3bb90e7e-28db-4321-9245-cdcea744ee73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DtbAjb2oiBBo",
+        "outputId": "3bb90e7e-28db-4321-9245-cdcea744ee73"
       },
       "execution_count": 50,
       "outputs": [
@@ -2841,11 +2841,11 @@
         "lista"
       ],
       "metadata": {
-        "id": "LkU9ol-tiPOY",
-        "outputId": "65092058-08b6-4c8a-8c23-e97b1d249f19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LkU9ol-tiPOY",
+        "outputId": "65092058-08b6-4c8a-8c23-e97b1d249f19"
       },
       "execution_count": 51,
       "outputs": [
@@ -2863,9 +2863,190 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "lista += 'klm'\n",
+        "lista"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-neGR9G6ilJA",
+        "outputId": "8fc119e8-a026-45e0-d06c-837887b72b7c"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.insert(0, 'início')\n",
+        "lista"
+      ],
+      "metadata": {
+        "id": "O-cH0Chnk4xk",
+        "outputId": "2034b3b8-5b47-4582-9bd1-c583b7573c81",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['início', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.insert(len(lista), 'final')\n",
+        "lista"
+      ],
+      "metadata": {
+        "id": "BoA0Lux0lDHU",
+        "outputId": "df60a45a-f965-4f18-c363-56458f11b844",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['início',\n",
+              " 'a',\n",
+              " 'b',\n",
+              " 'c',\n",
+              " 'd',\n",
+              " 'e',\n",
+              " 'f',\n",
+              " 'g',\n",
+              " 'h',\n",
+              " 'i',\n",
+              " 'j',\n",
+              " 'k',\n",
+              " 'l',\n",
+              " 'm',\n",
+              " 'final']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.pop(0)"
+      ],
+      "metadata": {
+        "id": "SBgkgc4glOTc",
+        "outputId": "0eb3c184-34a3-4b63-96d5-6635a94b9280",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'início'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista.pop(-1)"
+      ],
+      "metadata": {
+        "id": "-7hxSV3clYDs",
+        "outputId": "567d34fe-245e-4184-9d80-cfcfa80b5cea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'final'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lista"
+      ],
+      "metadata": {
+        "id": "ea6il-JhlZsr",
+        "outputId": "47836e19-6061-46ff-d5d4-d0d33d98b246",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-neGR9G6ilJA"
+        "id": "aGf84VRPldJ8"
       },
       "execution_count": null,
       "outputs": []
